[gd_scene load_steps=5 format=3 uid="uid://bnp4rvgxrjeyc"]

[ext_resource type="Script" path="res://chat/client.gd" id="1_mukb0"]
[ext_resource type="Script" path="res://websocket/websocket_client.gd" id="2_m2m3y"]
[ext_resource type="Script" path="res://chat/chat_ui.gd" id="3_kci1m"]

[sub_resource type="Theme" id="Theme_js4gt"]
default_font_size = 36

[node name="Client" type="Node2D"]
script = ExtResource("1_mukb0")

[node name="WebSocketClient" type="Node2D" parent="."]
script = ExtResource("2_m2m3y")

[node name="ChatUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1920.0
script = ExtResource("3_kci1m")

[node name="Background" type="ColorRect" parent="ChatUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="LineEdit" type="LineEdit" parent="ChatUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = -200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
placeholder_text = "입력하세요"
alignment = 1
max_length = 100
caret_blink = true

[node name="SendButton" type="Button" parent="ChatUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "전송
"

[node name="ChatLog" type="RichTextLabel" parent="ChatUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_js4gt")
bbcode_enabled = true

[connection signal="connected_to_server" from="WebSocketClient" to="." method="_on_web_socket_client_connected_to_server"]
[connection signal="connection_closed" from="WebSocketClient" to="." method="_on_web_socket_client_connection_closed"]
[connection signal="data_received" from="WebSocketClient" to="." method="_on_web_socket_client_data_received"]
[connection signal="pressed" from="ChatUI/SendButton" to="." method="_on_send_button_pressed"]
